# EthicAgent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: domain_weights.yaml  ethical_rules.yaml  llm_config.yaml  scenarios_config.yaml
dashboard/: app.py
dashboard/assets/: style.css
data/knowledge/: disaster_kg.json  ethical_ontology.json  finance_kg.json  healthcare_kg.json  hiring_kg.json
data/precedents/: disaster_precedents.json  finance_precedents.json  healthcare_precedents.json  hiring_precedents.json
data/scenarios/: disaster_generated.json  disaster_response.json  finance_generated.json  healthcare_generated.json  healthcare_triage.json  hiring_decision.json  hiring_generated.json  loan_approval.json
docs/: api_reference.md  architecture.md  ethical_framework.md
ethicagent/: __init__.py  __main__.py  orchestrator.py
ethicagent/adversarial/: __init__.py  jailbreak.py  perturbation.py  robustness.py
ethicagent/agents/: __init__.py  action_executor.py  context_agent.py  ethical_reasoner.py  fusion_agent.py  human_gateway.py  neural_reasoner.py  reflection_agent.py  symbolic_reasoner.py
ethicagent/benchmarks/: __init__.py  benchmark_suite.py  cross_domain.py  performance.py  reproducibility.py
ethicagent/core/: __init__.py  logger.py  state.py
ethicagent/ethics/: __init__.py  conflict_resolver.py  consequentialist.py  contextual_ethics.py  deontological.py  ethical_score.py  virtue_ethics.py
ethicagent/evaluation/: __init__.py  benchmark_runner.py  report_generator.py  statistical_analysis.py
ethicagent/explainability/: __init__.py  decision_trace.py  explanation_generator.py  visualization.py
ethicagent/knowledge/: __init__.py  knowledge_graph.py  memory_store.py  (+2 more)
notebooks/: 01_quick_start.ipynb  02_scenario_analysis.ipynb  03_evaluation_results.ipynb  04_custom_scenarios.ipynb
scripts/: export_results.py  generate_charts.py  generate_results.py  generate_test_data.py  run_all_experiments.py
tests/: __init__.py  conftest.py  test_agents.py  test_core_logger.py  test_core_state.py  test_eds_formula.py  test_ethics.py  test_evaluation.py  test_explainability.py  test_external_benchmarks.py  test_knowledge.py  test_scenarios.py  test_utils.py
(+26 files in other folders)
